Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32357

user file is not created when using 'Open Workspace...'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 16.0.0-beta1
    • Qt Creator 16.0.0-beta1
    • All Other Issues
    • None
    • Qt 6.8.1 + Qt Creator 16.0.0-beta1
    • 4ece872b3 (16.0)

      Steps to reproduce:

      1. Select 'New Project -> Application (Qt) -> Qt Quick Application'
      2. Finish the wizard
      3. Select 'Open Workspace...' and choose previously created project folder
      4. Select 'Configure Project' button

      Result:
      .qtcreator folder is created but it doesn't include project.json.user file. This file is created when using snapshot 'Built on Jan 7 2025 01:46:58 / From revision ab27988186'.

        For Gerrit Dashboard: QTCREATORBUG-32357
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            jukkanokso Jukka Nokso
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes