Fix initial setup of workspace projects

This partially reverts 56be5df0efd02471e59cc3872d8fe46f17fd2424.
As opposed to our assumption there, a BuildInfo does *not* necessarily
correspond to a build configuration. The code flow is as follows:
  - The workspace factory returns an empty list of BuildInfo objects to
    the target setup page.
  - In such a case, the target setup page itself creates a fallback
    BuildInfo object with only the kit member set.
  - This object is passed to Project::setup(), which uses it to create a
    target with no build configurations.
(I think we should get rid of this case, but not for 16.0 anymore.)

Fixes: QTCREATORBUG-32357
Change-Id: I203e6260777fae54e8b3557003f57f831ff2cf9c
Reviewed-by: David Schulz <david.schulz@qt.io>